# domapi

./: LICENSE  README.md  pyproject.toml
domapi/: __init__.py  webapi_classes.py
domapi/webapi_classes/: __init__.py  attrs.py  elements.py  xpath.py
test/: app.py
test/html/: index.html
test/js/: index.js
